--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>놀이터</title>
+    <title>코딩 연습</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
     <style>
         body {
-            background-color: rgb(228, 228, 197); 
-        }
-        h1 {
-            margin-top: 20px; 
-            margin-bottom: 20px; 
+        background-color: rgb(228, 228, 197);
         }
         .center {
             text-align: center;
             margin: auto;
-            width: 50%;
+            width: 80%;
+        }
+        h4 {
+            margin-top: 20px; 
+            margin-bottom: 20px; 
         }
         .hidden {
             display: none;
-        }
-        .navbar-custom .navbar-nav .nav-link {
-            color: black;
-        }
-        .navbar-custom .navbar-brand {
-            color: black;
-        }
-        .navbar-custom .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
         }
         .animate-text {
             animation: textExpand 2s forwards; 
@@ -53,348 +50,119 @@
             color: black;
             font-size: 10px;
             position: absolute;
-            top: 50%;
+            top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: black;
             background-color: white;
-            width: 85%;
+            width: 50%;
         }
-        @keyframes textExpand {
-            from {
-                font-size: 0px; 
-                opacity: 0;
-                transform: translate(-50%, -50%);
+            @keyframes textExpand {
+                from {
+                    font-size: 0px; 
+                    opacity: 0;
+                    transform: translate(-50%, -50%);
+                }
+                to {
+                    font-size: 15px; 
+                    opacity: 1;
+                    transform: translate(-50%, -50%);
+                }
             }
-            to {
-                font-size: 15px; 
-                opacity: 1;
-                transform: translate(-50%, -50%);
-            }
-        }
         #resetButton {  
             margin-top: 15px;
             margin-bottom: 15px;
-            width: 50%; 
+            width: 25%; 
         }
-        .card-container {
-            perspective: 1000px;
-        }
-        .card {
-            border: 1px solid #ddd;
-            margin: auto;
-            width: 70%;
-            font-size: 12px;
-            height: 50px;
-            transform-style: preserve-3d;
-            transition: transform 0.5s;
-            cursor: pointer;
-        }
-        .card-front, .card-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            padding: 10px;
-            backface-visibility: hidden;
-        }
-        .card-front {
-            font-size: 15px;
-        }
-        .card-back {
-            font-size: 12px;
-            transform: rotateY(180deg);
-
-        }
-        .card.flipped {
-            transform: rotateY(180deg);
-        }
-        .canvas-container {
-            display: flex;
-            flex-direction: column;
-        }
-        #canvas {
-            border: 5px solid rgb(80, 84, 4);
-            margin-top: 10px;
-            cursor: pointer;
-        }
-        .button-container {
-            margin-top: 10px;
-        }
-        .divider {
-            border-bottom: 10px solid #383535;
-            margin: 20px 0;
-            width: 100%;
-        }    
-        @media screen and (max-width: 768px) {
-            .center {
-                width: 100%; 
-                margin: 0; 
-            }
-            #resetButton {
-                width: 30%;
-            }
-        }    
-        .date-picker {
-        }
+        
     </style>
-    <script>
-        function showDate() {
-            var year = document.getElementById("year").value;
-            var month = document.getElementById("month").value;
-            var day = document.getElementById("day").value;
-            var resultText = "선택한 날짜: " + year + "년 " + month + "월 " + day + "일";
-            document.getElementById("result").innerText = resultText;
-        }
-    </script>
 </head>
-
 <body>
 <div class="center">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">오늘</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" 
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-           <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.weather.go.kr/w/index.do">날씨</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.ytn.co.kr/">뉴스</a>
-                    </li>
+        <div class="container">
+            <a class="navbar-brand" href="#!">소라의 코딩 연습</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">홈</a></li>
+                    <li class="nav-item"><a class="nav-link" href="game1.html">포춘쿠키</a></li>
+                    <li class="nav-item"><a class="nav-link" href="game2.html">카드뽑기</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-8">
+                <article>
+                    <header class="mb-4">
+                        <h4>강아지 뒷모습 보세요</h4>
+                    </header>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="dog.jpg" alt="강아지 사진" style="width: 50%; style="margin-top: 20px;"/></figure>
 
-    <div id="floatingWindow" class="bg-light p-4" style="display: none; position: fixed; bottom: 0; left: 0; right: 0; z-index: 999;">
-        <button id="closeButton" class="btn btn-danger float-right">닫기</button>
-        <div id="content"></div>
-    </div>
-    <h1>생일을 입력하고, 쿠키를 눌러주세요.</h1>
-    <div class="date-picker">
-        <label for="year">연도:</label>
-        <select id="year">
-            <option value="" disabled selected>연도 선택</option>
-            <script>
-                for (var i = 2023; i >= 1900; i--) {
-                    document.write('<option value="' + i + '">' + i + '</option>');
-                }
-            </script>
-        </select>        
+                </article>
+                <!-- Comments section-->
+                <section class="mb-5">
+                    <div class="card bg-light">
+                        <div class="card-body">
+                            <!-- Comment form-->
+                            <form class="mb-4"><textarea class="form-control" rows="3" placeholder="방명록을 남겨주세요."></textarea></form>
+                            <!-- Comment with nested comments-->
+                            <div class="d-flex mb-4">
+                                <!-- Parent comment-->
+                                <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                <div class="ms-3">
+                                    <div class="fw-bold">아무개</div>
+                                    방명록을 남길 수 있게 되면 좋겠다
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <!-- Side widgets-->
+            <div class="col-lg-4">
+                <!-- Search widget-->
+                <div class="card mb-4">
+                    <div class="card-header">검색해용</div>
+                    <div class="card-body">
+                        <div class="input-group">
+                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                            <button class="btn btn-primary" id="button-search" type="button">검색!</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Categories widget-->
+                <div class="card mb-4">
+                    <div class="card-header">목차</div>
+                    <div class="card-body">
+                        <div class="row">
 
-        <label for="month">월:</label>
-        <select id="month">
-            <option value="" disabled selected>월 선택</option>
-            <script>
-                for (var i = 1; i <= 12; i++) {
-                    document.write('<option value="' + i + '">' + i + '</option>');
-                }
-            </script>
-        </select>
+                                <ul class="list-unstyled mb-0">
+                                    <li><a href="#!">성격 분석</a></li>
+                                    <li><a href="#!">심리 테스트</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; soratoday.shop 2023</p></div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 
-        <label for="day">일:</label>
-        <select id="day">
-            <option value="" disabled selected>일 선택</option>
-            <script>
-                for (var i = 1; i <= 31; i++) {
-                    document.write('<option value="' + i + '">' + i + '</option>');
-                }
-            </script>
-        </select>
-
-        <button onclick="showDate()">입력</button>
-        <p id="result"></p>
-    </div>
-    <div class="fortune-container">
-        <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
-        <div id="fortune"></div>
-        <button id="resetButton">한 개 더 줘!</button>
-    </div>
-    <div class="divider"></div>
-    <h1>운세카드를 뽑아보세요.</h1>
-    <div class="card-container" id="A">
-        <div class="card" style="background-color: red;">
-            <div class="card-front">나야나</div>
-            <div class="card-back">오늘은 애정운이 가득!</div>
-        </div>
-    </div>
-    <div class="card-container" id="B">
-        <div class="card" style="background-color: rgb(192, 169, 25);">
-            <div class="card-front">뽑아줘</div>
-            <div class="card-back">오늘은 재물운이 가득!</div>
-        </div>
-    </div>
-    <div class="card-container" id="C">
-        <div class="card" style="background-color: rgb(98, 102, 158);">
-            <div class="card-front">여기야</div>
-            <div class="card-back">오늘은 학업운이 가득!</div>
-        </div>
-    </div>
-    <div class="card-container" id="D">
-        <div class="card" style="background-color: rgb(39, 200, 41);">
-            <div class="card-front">여길봐</div>
-            <div class="card-back">오늘은 건강운이 가득!</div>
-        </div>
-    </div>
-    <div class="divider"></div>
-    <div class="canvas-container">
-        <h1>마음을 그림으로 표현해보세요.</h1>
-        <canvas id="canvas" ></canvas>
-        <div class="button-container">
-            <button id="refreshButton">새로고침</button>
-        </div>
-    </div>
-    <div class="divider"></div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </div>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-crossorigin="anonymous"></script>
-<script>
-    const floatingWindow = document.getElementById('floatingWindow');
-    const content = document.getElementById('content');
-    const closeButton = document.getElementById('closeButton');
-
-    document.querySelectorAll('.nav-link').forEach((link) => {
-        link.addEventListener('click', (e) => {
-            e.preventDefault();
-            content.innerHTML = '';
-            content.innerHTML = `<iframe src="${e.target.getAttribute('href')}" width="100%" height="400px"></iframe>`;
-            floatingWindow.style.display = 'block';
-        });
-    });
-    closeButton.addEventListener('click', () => {
-        content.innerHTML = '';
-        floatingWindow.style.display = 'none';
-    });
-
-    var fortunes = [
-    "오늘 식사가 아주 맛있겠군요.",
-    "오늘 반가운 사람을 만나게 됩니다.",
-    "조금만 더 노력하면 원하는 것을 얻을 수 있습니다.",
-    "오늘은 재물운이 가득한 날입니다.",
-    "돌다리도 두드려 보고 건너는 게 좋아요.",
-    "가까운 사람에게 따뜻한 말을 건네보세요.",
-    "평소 하고 싶었던 일, 오늘 해보세요.",
-    "활짝 웃으면 오늘 매우 좋은 일이 생길 거예요.",
-    "남의 허물을 감싸주면 복 받을 거예요.",
-    "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
-    "소소한 일에서 기쁨을 찾아보세요.",
-    "오랫동안 만나지 못한 사람에게 연락을 해보세요.",
-    "평소에 가던 길이 아닌, 다른 길로 돌아가보세요.",
-    "당연한 것에도 감사하는 마음을 가져보세요.",
-    "옆사람을 칭찬해주세요. 작은 행운이 생깁니다."
-    ];
-
-    var images = ['포춘1.jpg', '포춘2.jpg'];
-    var currentImage = 0;
-    var fortuneText = document.getElementById('fortune');
-    var resetButton = document.getElementById('resetButton');
-    var fortuneImage = document.getElementById('fortuneImage');
-    var isFortuneShown = false;
-    fortuneImage.onclick = function() {
-        if (!isFortuneShown) {
-            currentImage = (currentImage + 1) % images.length;
-            this.src = images[currentImage];
-            this.classList.add('no-hover'); // 확대/커서 변경 없는 클래스 추가
-            var randomIndex = Math.floor(Math.random() * fortunes.length);
-            fortuneText.innerText = fortunes[randomIndex];
-            fortuneText.classList.add('animate-text'); // 애니메이션 클래스 추가
-            fortuneText.style.display = 'block';
-            resetButton.style.display;
-            isFortuneShown = true;
-        }
-    };
-    resetButton.onclick = function() {
-        currentImage = 0;
-        fortuneImage.src = '포춘1.jpg';
-        fortuneImage.classList.remove('no-hover');
-        fortuneText.style.display = 'none';
-        fortuneText.classList.remove('animate-text'); // 애니메이션 클래스 제거
-        resetButton.style.display;
-        isFortuneShown = false;
-    };
-    function toggleInterpretation(choice) {
-        var cardElement = document.getElementById(choice).querySelector('.card');
-        cardElement.classList.toggle('flipped');
-    }
-    document.getElementById("A").onclick = function() { toggleInterpretation("A"); };
-    document.getElementById("B").onclick = function() { toggleInterpretation("B"); };
-    document.getElementById("C").onclick = function() { toggleInterpretation("C"); };
-    document.getElementById("D").onclick = function() { toggleInterpretation("D"); };
-
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    let painting = false;
-    function resizeCanvas() {
-        canvas.width = window.innerWidth * 0.5;
-        canvas.height = window.innerHeight * 0.5;
-    }
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
-    function startPainting(e) {
-        painting = true;
-        draw(e);
-    }
-
-    function stopPainting() {
-        painting = false;
-        ctx.beginPath();
-    }
-
-    function handleMouseMove(e) {
-        if (!painting) return;
-        const rect = canvas.getBoundingClientRect();
-        let x, y;
-
-        if (e.type === 'touchmove') {
-            x = e.touches[0].clientX - rect.left;
-            y = e.touches[0].clientY - rect.top;
-        } else {
-            x = e.clientX - rect.left;
-            y = e.clientY - rect.top;
-        }
-        ctx.lineTo(x, y);
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(x, y);
-    }
-
-    canvas.addEventListener('mousedown', startPainting);
-    canvas.addEventListener('mouseup', stopPainting);
-    canvas.addEventListener('mouseleave', stopPainting);
-    canvas.addEventListener('mousemove', handleMouseMove);
-
-    function clearCanvas() {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-            }
-
-    canvas.addEventListener('touchstart', startPainting);
-    canvas.addEventListener('touchend', stopPainting);
-    canvas.addEventListener('touchcancel', stopPainting);
-    canvas.addEventListener('touchmove', handleMouseMove);
-    document.getElementById('refreshButton').addEventListener('click', clearCanvas);
-
-    function handleTouchMove(e) {
-        e.preventDefault(); // 스크롤 방지
-        if (!painting) return;
-
-        const rect = canvas.getBoundingClientRect();
-        const x = e.touches[0].clientX - rect.left;
-        const y = e.touches[0].clientY - rect.top;
-
-        ctx.lineTo(x, y);
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(x, y);
-    }
-    canvas.addEventListener('touchmove', handleTouchMove, { passive: false });
-</script>
 </body>
 </html>
