--- a/index.html
+++ b/index.html
@@ -1,117 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>코딩 연습</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <style>
-        body {
-        background-color: rgb(228, 228, 197);
-        }
-        .center {
-            text-align: center;
-            margin: auto;
-            width: 100%;
-        }
-        h4 {
-            margin-top: 20px; 
-            margin-bottom: 20px; 
-        }
-        .hidden {
-            display: none;
-        }
-        .animate-text {
-            animation: textExpand 2s forwards; 
-        }        
-    </style>
-</head>
-<body>
-<div class="center">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#!">소라의 코딩 연습</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">홈</a></li>
-                    <li class="nav-item"><a class="nav-link" href="game1.html">포춘쿠키</a></li>
-                    <li class="nav-item"><a class="nav-link" href="game2.html">카드뽑기</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-lg-8">
-                <article>
-                    <header class="mb-4">
-                        <h4>강아지 뒷모습 보세요</h4>
-                    </header>
-                    <figure class="mb-4"><img class="img-fluid rounded" src="dog.jpg" alt="강아지 사진" style="width: 50%; style="margin-top: 20px;"/></figure>
 
-                </article>
-                <!-- Comments section-->
-                <section class="mb-5">
-                    <div class="card bg-light">
-                        <div class="card-body">
-                            <!-- Comment form-->
-                            <form class="mb-4"><textarea class="form-control" rows="3" placeholder="방명록을 남겨주세요."></textarea></form>
-                            <!-- Comment with nested comments-->
-                            <div class="d-flex mb-4">
-                                <!-- Parent comment-->
-                                <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                <div class="ms-3">
-                                    <div class="fw-bold">아무개</div>
-                                    방명록을 남길 수 있게 되면 좋겠다
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-            <!-- Side widgets-->
-            <div class="col-lg-4">
-                <!-- Search widget-->
-                <div class="card mb-4">
-                    <div class="card-header">검색해용</div>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                            <button class="btn btn-primary" id="button-search" type="button">검색!</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Categories widget-->
-                <div class="card mb-4">
-                    <div class="card-header">목차</div>
-                    <div class="card-body">
-                        <div class="row">
+        <label for="year">연도:</label>
+        <select name="year" id="year">
+            <!-- 연도 옵션 -->
+            <script>
+                for (let i = 2023; i >= 1990; i--) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
 
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#!">성격 분석</a></li>
-                                    <li><a href="#!">심리 테스트</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; soratoday.shop 2023</p></div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-</div>
-</body>
-</html>
+        <label for="month">월:</label>
+        <select name="month" id="month">
+            <!-- 월 옵션 -->
+            <script>
+                for (let i = 1; i <= 12; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
+
+        <label for="day">일:</label>
+        <select name="day" id="day">
+            <!-- 일 옵션 -->
+            <script>
+                for (let i = 1; i <= 31; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+                }
+            </script>
+        </select>
+        <br><br>
