--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>성격 분석</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <style>
+        body {
+        background-color: rgb(228, 228, 197);
+        }
+        .center {
+            text-align: center;
+            margin: auto;
+            width: 100%;
+        }
+        h4 {
+            margin-top: 20px; 
+            margin-bottom: 20px; 
+        }
+        .hidden {
+            display: none;
+        }
+        .animate-text {
+            animation: textExpand 2s forwards; 
+        }        
+    </style>
+</head>
+<body>
+<div class="center">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#!">성격 분석</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">홈</a></li>
+                    <li class="nav-item"><a class="nav-link" href="game1.html">포춘쿠키</a></li>
+                    <li class="nav-item"><a class="nav-link" href="game2.html">카드뽑기</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  
+    <h1>내 정보를 입력해 주세요.</h1>
+    <form id="mbtiForm">
+        <label for="gender">성별:</label>
+        <select name="gender" id="gender">
+            <option value="male">남성</option>
+            <option value="female">여성</option>
+            <option value="other">기타</option>
+        </select>
+        <br><br>
         <label for="year">연도:</label>
         <select name="year" id="year">
             <!-- 연도 옵션 -->
             <script>
-                for (let i = 2023; i >= 1990; i--) {
+                for (let i = 2023; i >= 1900; i--) {
                     document.write('<option value="' + i + '">' + i + '</option>');
                 }
             </script>
@@ -29,3 +86,46 @@
             </script>
         </select>
         <br><br>
+      
+        <label for="mbti">MBTI:</label>
+        <select name="mbti" id="mbti">
+            <!-- MBTI 유형을 여기에 추가 -->
+            <option value="INFP">INFP</option>
+            <option value="INFJ">INFJ</option>
+            <option value="INTP">INTP</option>
+            <option value="INTJ">INTJ</option>          
+            <option value="ISFP">ISFP</option>
+            <option value="ISFJ">ISFJ</option>
+            <option value="ISTP">ISTP</option>
+            <option value="ISTJ">ISTJ</option>          
+            <option value="ENFP">ENFP</option>
+            <option value="ENFJ">ENFJ</option>
+            <option value="ENTP">ENTP</option>
+            <option value="ENTJ">ENTJ</option>          
+            <option value="ESFP">ESFP</option>
+            <option value="ESFJ">ESFJ</option>
+            <option value="ESTP">ESTP</option>
+            <option value="ESTJ">ESTJ</option>                    
+          
+            <!-- 추가 유형 -->
+        </select>
+        <br><br>
+        <button type="button" onclick="submitForm()">성격보기</button>
+    </form>
+    <script>
+        function submitForm() {
+            // 여기에 JavaScript로 폼 데이터를 처리하는 코드 추가
+            alert("폼이 제출되었습니다!"); // 임시 메시지
+        }
+    </script>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; soratoday.shop 2023</p></div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</div>
+</body>
+</html>
