--- a/game2.html
+++ b/game2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Welcome to sora world</title>
+    <title>놀이터</title>
     <style>
         body {
             background-color: rgb(228, 228, 197); 
@@ -87,6 +87,7 @@
             width: 70%;
             padding: 10px;
             text-align: center;
+            font-size: 10px;
             height: 50px;
             transform-style: preserve-3d;
             transition: transform 0.5s;
@@ -108,8 +109,10 @@
             transform: rotateY(180deg);
         }
         .canvas-container {
+            display: flex;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
+            justify-content: center;
         }
         #canvas {
             border: 5px solid rgb(80, 84, 4);
@@ -161,6 +164,14 @@
         <button id="closeButton" class="btn btn-danger float-right">닫기</button>
         <div id="content"></div>
     </div>
+    <div class="center">
+        <h1>포춘쿠키를 눌러주세요</h1>
+        <div class="container">
+            <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
+            <div id="fortune"></div>
+            <button id="resetButton">한 개 더 줘!</button>
+        </div>
+        <div class="divider"></div>
         <div class="container">
         <h1>심리테스트를 해보세요.</h1>
         <h8>좋아하는 동물을 선택하세요.</h8>
@@ -197,6 +208,9 @@
             </div>
         </div>
     </div>
+<div class="divider"></div>
+<h1> 다음엔 뭐가 추가될까요?</h>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -330,6 +344,21 @@
         canvas.addEventListener('touchmove', handleMouseMove);
         document.getElementById('refreshButton').addEventListener('click', clearCanvas);
 
+    function handleTouchMove(e) {
+        e.preventDefault(); // 스크롤 방지
+        if (!painting) return;
+
+        const rect = canvas.getBoundingClientRect();
+        const x = e.touches[0].clientX - rect.left;
+        const y = e.touches[0].clientY - rect.top;
+
+        ctx.lineTo(x, y);
+        ctx.stroke();
+        ctx.beginPath();
+        ctx.moveTo(x, y);
+    }
+    canvas.addEventListener('touchmove', handleTouchMove, { passive: false });
     </script>
 </body>
 </html>
+
